--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="poster_image_transition">poster_image_transition</string>
     <string name="poster_label_transition">poster_label_transition</string>
     <string name="www">WWW</string>
+    <string name="update_dialog_title">Store Update</string>
 </resources>
